--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container" id="container">
 
         <h1>Counter App</h1>
         <h2 id="counter"></h2>
@@ -17,9 +17,10 @@
         <div class="button-holder">
             <button class="increment" onclick="increment()">+</button>
             <button class="decrement" onclick="decrement()">-</button>
+            <button class="save" onclick="save()">save</button>
         </div>
 
-
+        <p id="saved"></p>
 
     </div>  
 
