--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="increment" onclick="increment()">+</button>
             <button class="decrement" onclick="decrement()">-</button>
             <button class="save" onclick="save()">save</button>
+            <button onclick="setToZero()">set to zero</button>
         </div>
 
         <p id="saved"></p>
